deploy-kube/build-image.yml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-build-thebidouilleur
  labels: 
    version: 2
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous 
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args: ["--context=git://git.thoughtless.eu/CyberPrez/PrezDocker",
            "--destination=thoughtlesshub/prezdocker:latest",
            "--dockerfile=Dockerfile"]
    volumeMounts:
      - name: kaniko-secret
        mountPath: /kaniko/.docker
  restartPolicy: Never
  volumes:
    - name: kaniko-secret
      secret:
        secretName: reg-credentials
        items:
          - key: .dockerconfigjson
            path: config.json
