deploy-kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: srvc-prezdocker
spec:
  ipFamilies:
  - IPv4
  selector:
    app: deploy-prezdocker
  ports:
    - name: srvc-prezdocker
      protocol: TCP
      port: 80
      targetPort: 80
